drkns 14.12.2019 23:03:49 +0000 - build 5527

1. 5524 - попытка №2, теперь с тестами.

2. Прочий рефакторинг.

drkns 12.12.2019 08:03:42 +0000 - build 5526

1. Частичный откат 5524.

drkns 11.12.2019 17:37:34 +0000 - build 5525

1. Уточнение 5524.

drkns 11.12.2019 01:29:03 +0000 - build 5524

1. Рефакторинг.

drkns 08.12.2019 23:12:53 +0000 - build 5523

1. Рефакторинг.

shmuel 07.12.2019 23:25:55 +0200 - build 5522

1. Небольшой рефакторинг.

drkns 07.12.2019 01:00:47 +0000 - build 5521

1. Новые версии fmt и Catch2.

drkns 06.12.2019 20:56:17 +0000 - build 5520

1. GCC build and warnings.

drkns 06.12.2019 18:23:09 +0000 - build 5519

1. 0003755: Тормозит Ctrl-H в списке Code pages
   То же самое в списке задач.

2. Cписок задач: пометка текущего окна и прочий рефакторинг.

3. Более логичная свёртка в DIF_WORDWRAP.

drkns 04.12.2019 18:28:22 +0000 - build 5518

1. Убрано разделение времени в UI на миллисекунды и такты, теперь просто такты.

2. Рефакторинг.

drkns 04.12.2019 17:44:18 +0000 - build 5517

1. И ещё раз.

drkns 04.12.2019 09:13:12 +0000 - build 5516

1. Уточнение 5514.

drkns 03.12.2019 08:04:01 +0000 - build 5515

1. Уточнение 5514.

drkns 02.12.2019 23:24:22 +0000 - build 5514

1. В автофильтрах творилась дичь:
   - список расширений брался не с панели, а с ФС, что приводило к тормозам в сетевых папках
   - при удачном расположении звёзд можно было получить неотключаемые фильтры.
   Много изменений, возможны чудеса.

2. В обработке ampersand shortcuts творилась дичь: иногда не работали клавиши, криво работала прокрутка в меню, копипаста и т.д и т.п.
   Много изменений, возможны чудеса.

3. Более толерантная загрузка фильтров, раскраски, режимов панели - не до первой неудачи, а пока есть, что загружать.
   Много изменений, возможны чудеса.

drkns 26.11.2019 21:09:23 +0000 - build 5513

1. Копирование файлов с панелей в буфер обмена перенесено на Ctrl+Shift+C. Ctrl+C уходит в комстроку, как раньше.
