@@ -1,3 +1,8 @@
+drkns 16.12.2019 21:38:49 +0000 - build 5528
+
+1. Открывая через API редактор с пустым именем файла можно было получить забавные результаты.
+   Всё это шаманство с ?New File? - это плохо, очень плохо.
+
 drkns 14.12.2019 23:03:49 +0000 - build 5527
 
 1. 5524 - попытка №2, теперь с тестами.
